--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     color: var(--color-gray-200);
     line-height: 1.7;
-    overflow: hidden;
+    overflow-x: hidden;
     background-color: var(--color-gray-600);
 }
 
@@ -69,4 +69,96 @@ img {
     display: block;
     object-fit: cover;
     width: 100%;
+}
+
+/* Button */
+.btn {
+    color: var(--color-gray-100);
+    width: fit-content;
+    margin: 0 auto;
+    padding: 0.9rem 2rem;
+    background-color: var(--color-primary);
+    border-radius: 1.5rem;
+    transition: var(--transition);
+}
+
+.btn:hover {
+    background-color: var(--color-secondary);
+    color: var(--color-gray-600);
+}
+
+.btn.lg {
+    padding: 1.2rem 3rem;
+    border-radius: 2rem;
+    font-size: 1.1rem;
+}
+
+.btn.sm {
+    padding: 0.4rem 1.2rem;
+    font-size: 0.9rem;
+}
+
+.btn.sm:hover {
+    background-color: var(--color-gray-100);
+}
+
+/* Section */
+section {
+    margin-top: 10rem;
+}
+
+.section__head {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.section__head span {
+    background-color: var(--color-gray-500);
+    color: var(--color-secondary);
+    padding: 0.8rem;
+    border-radius: 1rem;
+    font-size: 1.5rem;
+}
+
+/* Card */
+.card {
+    background-color: var(--color-gray-500);
+    border: 2px solid transparent;
+    text-align: center;
+    padding: 3rem 2rem;
+    border-radius: 0 3rem 0 3rem;
+    transition: var(--transition);
+}
+
+.card:hover {
+    background-color: transparent;
+    border-color: var(--color-gray-400);
+    cursor: default;
+}
+
+.card span {
+    width: 3rem;
+    height: 3rem;
+    background-color: var(--color-primary);
+    color: var(--color-gray-100);
+    font-size: 1.5rem;
+    padding: 0.8rem;
+    display: grid;
+    place-items: center;
+    margin-bottom: 1.5rem;
+    margin-inline: auto;
+    border-radius: 1rem;
+    transition: var(--transition);
+}
+
+.card:hover span {
+    background-color: var(--color-secondary);
+    color: var(--color-gray-600);
+}
+
+.card small {
+    margin-top: 1rem;
+    display: block;
+    font-weight: 300;
 }
