--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -53,7 +53,7 @@
     filter: blur(15px);
 }
 
-/* Programs */
+/*================= Programs =================*/
 .programs {
     margin-top: 4rem;
 }
@@ -77,7 +77,7 @@
     color: var(--color-gray-600);
 }
 
-/* Values */
+/*================= Values =================*/
 .values__container {
     display: grid;
     grid-template-columns: 38% 50%;
@@ -113,7 +113,7 @@
     top: -1.5rem;
 }
 
-/* FAQs */
+/*================= FAQs =================*/
 .faqs__wrapper {
     margin-top: 4rem;
     display: grid;
@@ -143,4 +143,83 @@
 
 .faq p {
     margin-top: 1.5rem;
+}
+
+/*================= Testimonials =================*/
+.testimonials {
+    width: 50rem;
+    margin-inline: auto;
+}
+
+.testimonials__head {
+    justify-content: center;
+}
+
+.card.testimonial {
+    position: relative;
+    text-align: left;
+    margin-top: 5rem;
+}
+
+.testimonial__avatar {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 1.5rem;
+    border: 2px solid transparent;
+    overflow: hidden;
+    position: absolute;
+    top: -2rem;
+    left: calc(50% - 2rem);
+    box-shadow: 0 1.5rem 2rem rgba(26, 26, 54, 0.4);
+    transition: var(--transition);
+}
+
+.testimonial:hover .testimonial__avatar {
+    border-radius: 50%;
+    border-color: var(--color-gray-400);
+}
+
+.testimonial__quote {
+    font-style: italic;
+    margin: 1rem 0 2rem;
+}
+
+.card small.testimonial__title {
+    margin-top: 0.3rem;
+}
+
+.testimonials__btn-container {
+    width: fit-content;
+    margin: 2.5rem auto 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.testimonials__btn {
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.testimonials__btn svg {
+    fill: var(--color-primary);
+    font-size: 1.8rem;
+    width: 3rem;
+    height: 3rem;
+}
+
+/*================= Footer =================*/
+footer {
+    background-color: var(--color-primary);
+    margin-top: 7rem;
+    padding-top: 7rem;
+    font-size: 0.9rem;
+    color: var(--color-gray-100);
+}
+
+.footer__container {
+    display: grid;
+    grid-template-columns: 26rem 1fr 1fr 1fr;
+    /* 2:57:20 */
 }
