--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -42,15 +42,12 @@
     background: linear-gradient(75deg, var(--color-secondary), transparent);
     border-radius: 50%;
     position: absolute;
+    filter: blur(15px);
     transition: var(--transition);
 }
 
 .main__header-image {
     position: relative;
-}
-
-.main__header-right:hover .main__header-circle {
-    filter: blur(15px);
 }
 
 /*================= Programs =================*/
@@ -221,5 +218,179 @@ footer {
 .footer__container {
     display: grid;
     grid-template-columns: 26rem 1fr 1fr 1fr;
-    /* 2:57:20 */
+    gap: 6rem;
+}
+
+.footer__container article {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.7rem;
+}
+
+.footer__container article p {
+    margin-top: 0.5rem;
+}
+
+.footer__container article h4 {
+    margin-bottom: 0.6rem;
+    font-size: 1rem;
+}
+
+.footer__socials {
+    margin-top: 1.5rem;
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+.footer__socials a {
+    background-color: var(--color-gray-100);
+    padding: 0.7rem;
+    border: 1px solid transparent;
+    border-radius: 0.6rem;
+    transition: var(--transition);
+    line-height: 0;
+}
+
+.footer__socials a svg {
+    color: var(--color-gray-600);
+}
+
+.footer__socials a:hover {
+    border-color: var(--color-gray-100);
+    background-color: transparent;
+}
+
+.footer__copyright {
+    color: var(--color-gray-100);
+    text-align: center;
+    padding: 1.5rem 0;
+    border-top: 2px solid var(--color-primary-variant);
+    margin-top: 5rem;
+}
+
+/* =========================== MEDIA QUERIES (medium screens) =========================== */
+@media screen and (max-width: 1024px) {
+    /* Main header */
+    .main__header {
+        height: fit-content;
+        padding: 12rem 0;
+    }
+
+    .main__header-container {
+        gap: 0;
+    }
+
+    .main__header-circle {
+        width: 16rem;
+        height: 16rem;
+    }
+
+    /* Programs */
+    .programs__wrapper {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    /* Values */
+    .values__container {
+        grid-template-columns: 1fr;
+        justify-content: center;
+        gap: 4rem;
+    }
+
+    .values__wrapper {
+        gap: 4rem 3rem;
+    }
+
+    .values__image {
+        display: none;
+    }
+
+    /* FAQs */
+    .faqs__wrapper {
+        grid-template-columns: 1fr;
+    }
+
+    /* Testimonials */
+    .testimonials {
+        width: 75%;
+    }
+
+    /* Footer */
+    .footer__container {
+        grid-template-columns: 1fr 1fr;
+        gap: 4rem;
+    }
+}
+
+/* =========================== MEDIA QUERIES (small screens) =========================== */
+@media screen and (max-width: 600px) {
+    /* Main header */
+    .main__header {
+        margin-top: 0;
+        padding: 12rem 0 0;
+        height: 100vh;
+    }
+
+    .main__header-image,
+    .main__header-circle {
+        display: none;
+    }
+
+    .main__header-container {
+        grid-template-columns: 1fr;
+    }
+
+    /* Programs */
+    .programs__wrapper {
+        grid-template-columns: 1fr;
+        gap: 2rem;
+        margin-top: 3rem;
+    }
+
+    .programs__program {
+        width: 84%;
+        margin: 0 auto;
+    }
+
+    /* Values */
+    .values__wrapper {
+        grid-template-columns: 1fr;
+        gap: 3rem;
+    }
+
+    .card.values__value {
+        width: 84%;
+        margin-inline: auto;
+    }
+
+    /* FAQs */
+    .faqs__wrapper {
+        gap: 1rem;
+        margin-top: 3rem;
+    }
+
+    /* Testimonials */
+    .testimonials {
+        width: 100%;
+    }
+
+    /* Footer */
+    footer {
+        margin-top: 7rem;
+    }
+
+    .footer__container {
+        grid-template-columns: 1fr;
+        gap: 3rem;
+    }
+
+    .footer__container article {
+        align-items: center;
+    }
+
+    .footer__container article p {
+        text-align: center;
+    }
 }
